# sdl-learning

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/cHelloWorld/: main.c
src/clear/: GameManager.cpp
src/default-hello-world/: main.c
src/hello-world/: GameManager.cpp  GameManager.h  main.cpp
src/points/: GameManager.cpp  GameManager.h
src/rectangles/: GameManager.cpp  GameManager.h  main.cpp
